# influxdb-stream

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  PLAN_INFLUXDB_STREAM_CRATE.md  README.md  docker-compose.yml
.claude/commands/: analyze.md
.github/workflows/: ci.yml  release.yml
benches/: comparison.rs  streaming.rs
examples/: memory_comparison.rs
plans/: ROADMAP.md
scripts/: bench-local.sh  test-local.sh
src/: client.rs  error.rs  lib.rs  parser.rs  types.rs  value.rs
tests/: integration.rs
