[package]
name = "influxdb-stream"
version = "0.1.0"
edition = "2024"
authors = ["Aniai <contact@aniai.ai>"]
description = "Async streaming client for InfluxDB 2.x - query millions of rows without OOM"
repository = "https://github.com/aniai-dev/influxdb-stream"
license = "MIT"
keywords = ["influxdb", "streaming", "async", "timeseries", "database"]
categories = ["database", "asynchronous"]
rust-version = "1.85"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-stream = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# CSV parsing
csv-async = { version = "1.3", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Duration parsing (Go-style durations like "1h30m")
go-parse-duration = "0.1"

# Base64 for binary data
base64 = "0.22"

# Ordered floats for hash/eq
ordered-float = "4.6"

# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
tracking-allocator = "0.4"
# For comparison benchmarks
influxdb2 = "0.5"
influxdb2-structmap = "0.2"
num-traits = "0.2"
sysinfo = "0.36.1"

[features]
default = []

[[bench]]
name = "streaming"
harness = false

[[bench]]
name = "comparison"
harness = false
